manifests/dask-operator.yaml
---
# Source: dask-kubernetes-operator/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-dask-kubernetes-operator
  labels:
    helm.sh/chart: dask-kubernetes-operator-2022.10.1
    app.kubernetes.io/name: dask-kubernetes-operator
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "2022.4.1"
    app.kubernetes.io/managed-by: Helm
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: dask-kubernetes-operator
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      labels:
        app.kubernetes.io/name: dask-kubernetes-operator
        app.kubernetes.io/instance: release-name
    spec:
      serviceAccountName: release-name-dask-kubernetes-operator
      securityContext:
        {}
      containers:
        - name: dask-kubernetes-operator
          securityContext:
            {}
          image: "ghcr.io/dask/dask-kubernetes-operator:2022.10.1"
          imagePullPolicy: IfNotPresent
          resources:
            {}
