manifests/jhub-ingress.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      cert-manager.io/cluster-issuer: lets-issuer 
      kubernetes.io/ingress.class: nginx
    name: ingress-sosc
    namespace: default
  spec:
    rules:
    - host: sosc.131.154.96.42.myip.cloud.infn.it
      http:
        paths:
        - backend:
            service:
              name: hub
              port:
                number: 8083
          path: /
          pathType: Prefix
    tls:
    - hosts:
      - sosc.131.154.96.42.myip.cloud.infn.it
      secretName: nginx-tls-sosc
kind: List
